--- a/index.html
+++ b/index.html
@@ -129,6 +129,10 @@
 
                 <div class="volunteer-col-1">
                     <h2>Why Volunteer?</h2>
+                    <p>There are millions of people out there <br>
+                    who are devoid of the right resources or exposure to upskill themselves<br>
+                    The more you share your skills the more value you add back.<br>
+                    Making the world a better place to live</p>
                 </div>
 
                 <div class="volunteer-col-1">
