Service Section Images

--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
 
         <section class="service-section">
 
-            
-
+           
             <h1>Our Domains</h1>
             <p>Over the past few months we've been curating professionals from various domains</p>
 
@@ -81,13 +80,13 @@
                 </div>
 
                 <div class="service-col">
-                    <img src="E:/dev/git_repo/dbms_crud_website/assets/images/mic.png">
+                    <img src="E:/dev/git_repo/dbms_crud_website/assets/images/web_dev.png">
                     <h3>Web Dev</h3>
                     <p>Industry Professionals with real time project sessions</p>
                 </div>
 
                 <div class="service-col">
-                    <img src="E:/dev/git_repo/dbms_crud_website/assets/images/logoDesign.jpg">
+                    <img src="E:/dev/git_repo/dbms_crud_website/assets/images/app.png">
                     <h3>Mobile App Dev</h3>
                     <p>We're proud to have one of the top instructors on Flutter</p>
                 </div>
@@ -97,20 +96,20 @@
 
             <div class="row-services">
                 <div class="service-col">
-                    <img src="E:/dev/git_repo/dbms_crud_website/assets/images/uiux.png">
-                    <h3>UI UX Design</h3>
+                    <img src="E:/dev/git_repo/dbms_crud_website/assets/images/logo.png">
+                    <h3>Logo Design</h3>
                     <p>We've a bunch of freelance designers to show you the behind the scenes</p>
                 </div>
 
                 <div class="service-col">
-                    <img src="E:/dev/git_repo/dbms_crud_website/assets/images/webDev.png">
-                    <h3>Web Dev</h3>
+                    <img src="E:/dev/git_repo/dbms_crud_website/assets/images/illustration.png">
+                    <h3>Illustrations</h3>
                     <p>Industry Professionals with real time project sessions</p>
                 </div>
 
                 <div class="service-col">
-                    <img src="E:/dev/git_repo/dbms_crud_website/assets/images/logoDesign.jpg">
-                    <h3>Mobile App Dev</h3>
+                    <img src="E:/dev/git_repo/dbms_crud_website/assets/images/brand.png">
+                    <h3>Brand Identity</h3>
                     <p>We're proud to have one of the top instructors on Flutter</p>
                 </div>
 
