--- a/index.html
+++ b/index.html
@@ -189,7 +189,23 @@
 
         <!----------------------------------------Testimonial----------------------------------------------->
 
-        <section>
+        <section class="testimonial-section">
+            <div class="slider">
+                <div class="slide">
+                    <div class="slide-text">
+                        <p class="testimonial">
+                            "One of the best trusted platforms out there. We loved the attention and care
+                            provided to us. Helped us to upskill ourselves and get over the initial fear 
+                            of starting in a new domain."
+                        </p>
+
+                        <p class="client">John</p>
+                            <span>Web Developer</span>
+
+                    </div>
+                </div>
+            </div>
+
 
         </section>
 
