--- a/index.html
+++ b/index.html
@@ -190,10 +190,11 @@
         <!----------------------------------------Testimonial----------------------------------------------->
 
         <section class="testimonial-section">
+
             <div class="slider">
                 <div class="slide">
-                    <div class="slide-text">
-                        <p class="testimonial">
+                    <div class="testimonial">
+                        <p>
                             "One of the best trusted platforms out there. We loved the attention and care
                             provided to us. Helped us to upskill ourselves and get over the initial fear 
                             of starting in a new domain."
@@ -202,6 +203,10 @@
                         <p class="client">John</p>
                             <span>Web Developer</span>
 
+                    </div>
+
+                    <div class="slide-img">
+                        <img src="assets/images/client.jpg" alt="image">
                     </div>
                 </div>
             </div>
