--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
          
             <div class="row">
                 <div class="hero-col-1">
-                    <p>Hello there!</p>
+                    <h4>Hello there!</h4>
                     <h3>Volunteer Share Add Value</h3>
                     <p>We're a closed community of curated professionals and volunteers<br>
                     willing to offer their services back to the community free of cost.<br>
@@ -208,6 +208,10 @@
                     <div class="slide-img">
                         <img src="assets/images/client.jpg" alt="image">
                     </div>
+                </div>
+                <div class="buttons">
+                    <div class="next"></div>
+                    <div class="prev"></div>
                 </div>
             </div>
 
