fixing the volunteer section

--- a/index.html
+++ b/index.html
@@ -129,7 +129,14 @@
             <div class="row-volunteer">
 
                 <div class="volunteer-col-1">
-                    <h2>Why Volunteer?</h2>
+                    <div class="vol_reason">
+                        <h2>Why Volunteer?</h2>
+                    <p>Giving back to the society matters. There are millions of those out there <br>
+                        who might benefit from free resources. Giving back to the society matters. <br>
+                         There are millions of those out there who might benefit from free resources.</p>
+
+                    </div>
+                    
                     
                 </div>
 
