testimonial slide_in

--- a/index.html
+++ b/index.html
@@ -126,13 +126,14 @@
 
         <section class="volunteer-section">
 
-            <div class="row-volunteer">
+            <div class="row-volunteer slide-in">
 
                 <div class="volunteer-col-1">
                     <div class="vol_reason">
                         <h2>Why Volunteer?</h2>
-                    <p>Giving back to the society matters. There are millions of those out there <br>
-                        who might benefit from free resources. Giving back to the society matters. <br>
+                        <br>
+                        <p>Giving back to the society matters. There are millions of those out there 
+                        who might benefit from free resources. Giving back to the society matters. 
                          There are millions of those out there who might benefit from free resources.</p>
 
                     </div>
@@ -207,7 +208,7 @@
 
         <section class="testimonial-section">
 
-            <div class="slider">
+            <div class="slider slide-in">
                 <div class="slide">
                     <div class="testimonial">
                         <p>
