--- a/index.html
+++ b/index.html
@@ -241,10 +241,18 @@
         <!----------------------------------------Footer----------------------------------------------->
 
         <section class="footer">
-            <h4>Volunteer Share Add Value</h4>
-            <p>A closed community community to share free courses and content</p>
+            <div class="footer-row">
+                <div class="footer-title">
+                    <h3>Volunteer Share Add Value</h3>
+                </div>
+                <div class="footer-desc">
+                    <p>A closed community community to share free courses and content</p>
+                </div>
+                <img src="/assets/icons_svg/heart.png">
+            </div>
+            
+            
 
-            <p>Made with love glenpaulson</i></p> 
 
         </section>
 
