--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
             <div class="row-services slide-in">
                 <div class="service-col">
-                    <img src="E:/dev/git_repo/dbms_crud_website/assets/images/logo.png">
+                    <img src="E:/dev/git_repo/dbms_crud_website/assets/images/Logo Design.png">
                     <h3>Logo Design</h3>
                     <p>We've a bunch of freelance designers to show you the behind the scenes</p>
                 </div>
@@ -242,7 +242,7 @@
 
         <section class="footer">
             <div class="footer-row">
-                <img src="assets/images/i.png" alt="image" width="200px">
+                <img src="assets/images/logo.png" alt="image" width="70px">
                 <div class="footer-title">
                     <h3>Volunteer Share Add Value</h3>
                 </div>
