--- a/index3.html
+++ b/index3.html
@@ -96,19 +96,19 @@
 
             <div class="row-services slide-in">
                 <div class="service-col">
-                    <img src="assets/images/uiux.png"> 
+                    <img src="E:/dev/git_repo/dbms_crud_website/assets/images/uiux.png"> 
                     <h3>UI UX Design</h3>
                     <p>We've a bunch of freelance designers to show you the behind the scenes</p>
                 </div>
 
                 <div class="service-col">
-                    <img src="assets/images/web_dev.png">
+                    <img src="E:/dev/git_repo/dbms_crud_website/assets/images/web_dev.png">
                     <h3>Web Dev</h3>
                     <p>Industry Professionals with real time project sessions</p>
                 </div>
 
                 <div class="service-col">
-                    <img src="assets/images/app.png">
+                    <img src="E:/dev/git_repo/dbms_crud_website/assets/images/app.png">
                     <h3>Mobile App Dev</h3>
                     <p>We're proud to have one of the top instructors on Flutter</p>
                 </div>
@@ -118,19 +118,19 @@
 
             <div class="row-services slide-in">
                 <div class="service-col">
-                    <img src="assets/images/Logo Design.png">
+                    <img src="E:/dev/git_repo/dbms_crud_website/assets/images/Logo Design.png">
                     <h3>Logo Design</h3>
                     <p>We've a bunch of freelance designers to show you the behind the scenes</p>
                 </div>
 
                 <div class="service-col">
-                    <img src="assets/images/illustration_2.png">
+                    <img src="E:/dev/git_repo/dbms_crud_website/assets/images/illustration_2.png">
                     <h3>Illustrations</h3>
                     <p>Industry Professionals with real time project sessions</p>
                 </div>
 
                 <div class="service-col">
-                    <img src="assets/images/brand.png">
+                    <img src="E:/dev/git_repo/dbms_crud_website/assets/images/brand.png">
                     <h3>Brand Identity</h3>
                     <p>We're proud to have one of the top instructors on Flutter</p>
                 </div>
